--- a/door.abluestar.com/style.css
+++ b/door.abluestar.com/style.css
@@ -1,9 +1,11 @@
+.page {
+  margin-top: 30px ;
+}
 .social {
    margin: 24px 0;
    padding: 0;
    font-size: 30px;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
-   text-align: center;
 }
 .social li {
    display: inline-block;
@@ -12,6 +14,8 @@
    width: 30px;
    height: 30px;
 }
-.social li a { color: #fff; }
+.social li a { color: #000; }
 .social li a:hover { color: #11ABB0; }
+
+
 footer {text-align: center; }
